# otus-cpp-basics

./: .gitignore  README.md  hello_world  hello_world.cpp
hw_02/: move_me_out.cpp
hw_03/: CMakeLists.txt  guess_the_number.cpp  high_scores.txt
hw_04/: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Dust.hpp  Physics.cpp  Physics.hpp  Point.hpp  World.cpp  World.hpp
hw_04/black_box/: Application.cpp
hw_05/: CMakeLists.txt  statistics.cpp
hw_06/: CMakeLists.txt  containers.cpp
hw_07/: CMakeLists.txt  containers.hpp  dl_list_tests.cpp  sequential_container_tests.cpp
